--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "next": "13.x",
     "react": "18.x",
     "react-dom": "18.x",
+    "react-markdown": "^8.0.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
